if (BUILD_TESTING)
    # Define the test executables
    add_executable(und_add_vertex_test und_add_vertex_tests.cpp)
    add_executable(und_add_edge_test und_add_edge_tests.cpp)
    add_executable(und_contains_vertex_test und_contains_vertex_tests.cpp)
    add_executable(und_contains_edge_test und_contains_edge_tests.cpp)
    add_executable(und_remove_edge_test und_remove_edge_tests.cpp)
    add_executable(und_remove_vertex_test und_remove_vertex_tests.cpp)
    add_executable(und_degree_test und_degree_tests.cpp)
    add_executable(und_neighbors_test und_neighbors_tests.cpp)

    # Link each test executable with Google Test and your library
    target_link_libraries(und_add_vertex_test PRIVATE grphx gtest_main)
    target_link_libraries(und_add_edge_test PRIVATE grphx gtest_main)
    target_link_libraries(und_contains_vertex_test PRIVATE grphx gtest_main)
    target_link_libraries(und_contains_edge_test PRIVATE grphx gtest_main)
    target_link_libraries(und_remove_edge_test PRIVATE grphx gtest_main)
    target_link_libraries(und_remove_vertex_test PRIVATE grphx gtest_main)
    target_link_libraries(und_degree_test PRIVATE grphx gtest_main)
    target_link_libraries(und_neighbors_test PRIVATE grphx gtest_main)

    # Define the tests
    include(GoogleTest)
    gtest_discover_tests(und_add_vertex_test)
    gtest_discover_tests(und_add_edge_test)
    gtest_discover_tests(und_contains_vertex_test)
    gtest_discover_tests(und_contains_edge_test)
    gtest_discover_tests(und_remove_edge_test)
    gtest_discover_tests(und_remove_vertex_test)
    gtest_discover_tests(und_degree_test)
    gtest_discover_tests(und_neighbors_test)
endif()